--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "engines": {
       "node": "16.17.1"
     },
+    "resolutions": { "react-error-overlay": "6.0.9" },
     "main": "server/server.js",
     "scripts": {
       "start": "node server/server.js",
