playing with npm i

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "music-theory-manual",
+    "name": "Music-Theory-Manual",
     "version": "1.0.0",
     "description": "",
     "engines": {
